--- a/20160726第一天/13.常用的方法.html
+++ b/20160726第一天/13.常用的方法.html
@@ -6,6 +6,7 @@
 
 </head>
 <body>
+<!--uppercase lowercase-->
 
 <script src="angular.js"></script>
 <script>
@@ -19,6 +20,56 @@
    bind
    isArray isFunction isObject
    */
+//1.
+  var str = angular.uppercase('zfpx');/*转换为大写*/
+  var str1 = angular.lowercase('ZFPX');//转换为小写
+  console.log(str);
+  console.log(str1);
+//  2. equals   相当于 ===
+  var flag=angular.equals(NaN,NaN);//返回结果为true
+  var flag1=angular.equals(/^\d+$/,/^\d+$/);//返回结果为true
+  console.log(flag);
+  console.log(flag1);
+
+//  3.extend 继承
+  /*var obj1={name:'zfpx'},obj2={age:8};
+  angular.extend(obj1,obj2);
+  console.log(obj1);*/
+//  4.copy 复制
+  var obj1={name:'zfpx'},obj2={age:8};
+  angular.copy(obj1,obj2);
+  console.log(obj2);
+//  5.toJson(JSON.stringify)  fromJson(JSON.parse)
+  var obj3={name:'zhangsan'};
+  var obj4 = angular.toJson(obj3);
+  console.log(obj4);
+  var obj5 = angular.fromJson(obj4);
+  console.log(obj5);
+//  6.forEach 遍历循环数组
+//  参数1）要遍历的数组，2）function,3)改变this指向
+  var arr=['zhangsan','lisi','wangwu'];
+  var arr1={name:'zfpx'};
+  angular.forEach(arr,function (item,index) {
+    console.log(this.name, item ,index)
+  },arr1);
+//  7.bind
+//  参数1）要改this的对象，参数2）this指向，参数3）传递的参数
+  function eat(num) {
+    this.name=num;
+    console.log(this);
+  }
+  obj={name:'zfpx'};
+  angular.bind(eat,obj,8);
+// 8.isArray isFunction isObject 返回的都是boolean类型 true 或者false
+  var flag2 = angular.isObject(null);
+  console.log(flag2)
+
+
+
+
+
+
+
 
 </script>
 </body>
