update the first day

--- a/20160727第一天/1.demo.html
+++ b/20160727第一天/1.demo.html
@@ -10,18 +10,25 @@
 </div>
 <script src="angular.js"></script>
 <script>
-    // 1.指令
-    //   ng- 或者data-ng- 为前缀的就是angular胡内置指令
-    //   放在html标签里面的
-    //   指令是函数
-    // 2. {{ }}实现数据绑定，angular重要核心功能之一
-    //  变量  字符串   运算符
-    //  字符串 数组 对象 数字
-    // ng-app
-    // 告诉angularJS 从这里开始归他管
-    //
+    //  angular两个基本概念？
+    //  1.指令 （内置指令）
+    //  1)在我们的html结构中以 ng- 或者 data-ng- 为前缀的都是我们angular的内置指令
+    //  2)是绑定在我们DOM元素上的一个函数
+    //  3)同一个DOM元素上的指令有优先级的问题
 
+    //  2. 框架的核心功能之一数据绑定 表达式 {{ }} 两个嵌套的花括号就是angular表达式
+    //  1)它是ng-bind 的缩写
+    //  2)可以把数据绑定到HTML，类似Javascript代码片段，可以包含文字、运算符和变量，通常在绑定数据中用到，表达式可以绑定数字、字符串、对象、数组。
 
+    //  3. ng-app
+    //  1)告诉angular，整个浏览器都归它管；
+    //  2)会产生一个$rootScope， 根作用域
+
+    //  4. ng-init
+    //  1)初始化数据，在其作用域内可以调用，
+    //  2)初始化的值可以使是数字，数组等
+    //  3)如果没有加单引号就是我们scope上的值
+    //  4)只用于小的demo，真正的项目不会在这里初始化值的；
 </script>
 </body>
 </html>
