--- a/20160727第一天/10.ng-class隔行变色.html
+++ b/20160727第一天/10.ng-class隔行变色.html
@@ -22,7 +22,7 @@
 
 <script src="angular.js"></script>
 <script>
-
+//当遍历的数组中有相同的数据需要在遍历数组的时候在后面加上track by $index 来解决错误
 </script>
 </body>
 </html>
