--- a/20160727第一天/11.过滤器.html
+++ b/20160727第一天/11.过滤器.html
@@ -26,9 +26,16 @@
 {{'zfpx' | limitTo:2}}
 {{[1,2,3,4] | limitTo:2}}
 <!--7.filter -->
-<!--把数组中的与匹配过滤内容一致的数组以一个新的数组返回-->
+<!--
+  (1)给定的数组中过滤器其子集以一个新的数组的形式返回 例如用于搜索框
+  (2)它的第一个参数可以是字符串，也可以是对象还还可以是函数（用来在数组中选择元素）
+  (3)都二个参数有三种情况：true(严格比较) false(不区分大小写的比较) 函数(函数的结果为真就接受这个元素)
+-->
 <!--8. orderBy -->
-<!--用来排序，将数组排序返回一个新的数组-->
+<!--
+   (1)可以用表达式对指定的数组进行排序
+   (2)接受两个参数 第一个必须(函数 字符串 数组) 确定数组排序的方向 第二个可选 （为true 结果进行反转）
+-->
 
 
 
