--- a/20160727第一天/14.控制器.html
+++ b/20160727第一天/14.控制器.html
@@ -14,14 +14,30 @@
 
 <script src="angular.js"></script>
 <script>
-  var app = angular.module('myApp',[]);//不依赖于其他模板的话，必须写一个[] ,创建一个模板
-  app.controller('myCtrl',function ($scope) {
-//    $scope 是固定的不可以修
-//    定义变量或者方法都是给$scope添加对象
-    $scope.name='zfpx';
-    console.log($scope);
+  // angular.module()
+  // 1) 创建一个模板
+  // 参数
+  // 第一个参数  模板的名字（字符串）
+  // 第二个参数  需要依赖的模板的注入,以数组的形式传入，没有需要，就放一个空[]，必须要有!
+  // 第二个参数不写是获取模板
+  // 返回值是一个module对象
+  var app = angular.module('myMod',[]);
 
-  });//创建一个控制器
+  // 2)module 对象上有一个controller 方法
+  // 参数
+  // 第一个 控制器的名字
+  // 第二个 是函数（自动注入一个$scope对象）
+  // controller 会创建一个新的作用域scope
+  app.controller("myCtrl",function($scope){
+//      $scope
+//      1 声明变量和函数，存储在$scope上的一个属性
+//      2 这里声明的变量和函数，外界不受外界干扰，一般外界获取不到；
+    $scope.age=8;
+    $scope.handle=function(){
+      $scope.age++;
+    }
+
+  })
 
 
 </script>
