--- a/20160727第一天/9.ng-style.html
+++ b/20160727第一天/9.ng-style.html
@@ -13,8 +13,7 @@
 
 <script src="angular.js"></script>
 <script>
-// ng-style
-//    动态绑定行内样式
+    // ng-style ：给DOM元素增加行内样式的指令；
 
 </script>
 </body>
