--- a/20160727第一天/2.demo.html
+++ b/20160727第一天/2.demo.html
@@ -10,5 +10,13 @@
   {{'我是花括号的内容==>'+name}}
 </div>
 <script src="angular.js"></script>
+<script>
+  //  ng-model
+  //  1)用在input select 和textarea或者自定义表单 上
+  //  2)他将当前作用域中表达式的值和给定的元素上的值进行绑定
+  //  3)ng-model的值是scope中的一个属性，如果没有定义则为空，并且会隐形的创建一个属性
+  //  4)始终保存在$scope的某个数据模型中，并不是scope模型上
+  //  5)实现双向绑定
+</script>
 </body>
 </html>
