--- a/20160803第三天/8.模块之间的依赖.html
+++ b/20160803第三天/8.模块之间的依赖.html
@@ -11,12 +11,11 @@
 </div>
 
 <script src="angular.js"></script>
+<script src="8.模块之间的依赖2.js"></script>
+<!--1.把模块引入进来-->
 <script>
-    var app1 = angular.module('myApp1', []);
-    app1.controller('myCtrl', function ($scope) {
-        $scope.name = 'zfpx1';
-    });
     var app2 = angular.module('myApp2', ['myApp1']);
+//    2.将依赖的模块注入到模块定义中
 
 
 
